--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
                 <artifactId>vertx-unit</artifactId>
                 <version>${vertx.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.arquillian.cube</groupId>
+                <artifactId>arquillian-cube-openshift-starter</artifactId>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.arquillian.cube</groupId>
+                <artifactId>arquillian-cube-openshift-starter</artifactId>
+                <scope>test</scope>
+            </dependency>
         
     </dependencies>
 
