--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
                 <version>1.15.3</version>
                 <scope>test</scope>
             </dependency>
+              <dependency>
+      <groupId>io.fabric8</groupId>
+      <artifactId>openshift-client</artifactId>
+      <version>3.1.10</version>
+      <scope>test</scope>
+    </dependency>
+
         
     </dependencies>
 
