--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <java.version>1.8</java.version>
         <vertx.version>3.5.0</vertx.version>
+        <vertx-maven-plugin.version>1.0.13</vertx-maven-plugin.version>
     </properties>
     <dependencies>
         
@@ -40,5 +41,60 @@
 
         
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>vertx-maven-plugin</artifactId>
+                <version>${vertx-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>vmp</id>
+                        <goals>
+                            <goal>initialize</goal>
+                            <goal>package</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <redeploy>true</redeploy>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+    <profile>
+        <id>openshift</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>io.fabric8</groupId>
+                    <artifactId>fabric8-maven-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>fmp</id>
+                            <goals>
+                                <goal>resource</goal>
+                                <goal>build</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <enricher>
+                            <excludes>
+                                <exclude>f8-maven-scm</exclude>
+                            </excludes>
+                            <config>
+                                <vertx-health-check>
+                                    <path>/</path>
+                                </vertx-health-check>
+                            </config>
+                        </enricher>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
 
 </project>
