--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-core</artifactId>
                 <version>${vertx.version}</version>
-            </dependency>
+	</dependency>
         
             <dependency>
                 <groupId>io.vertx</groupId>
@@ -42,11 +42,12 @@
         
     </dependencies>
     <build>
-        <plugins>
+	    <plugins>
+
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>vertx-maven-plugin</artifactId>
-                <version>${vertx-maven-plugin.version}</version>
+		<version>${vertx-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>vmp</id>
@@ -95,6 +96,7 @@
                 </plugin>
             </plugins>
         </build>
-    </profile>
+</profile>
+</profiles>
 
 </project>
