--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>vertx blank application</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
@@ -13,13 +13,26 @@
         <vertx.version>3.5.0</vertx.version>
         <vertx-maven-plugin.version>1.0.13</vertx-maven-plugin.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-dependencies</artifactId>
+                <version>${vertx.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         
             <dependency>
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-core</artifactId>
                 <version>${vertx.version}</version>
-	</dependency>
+	        </dependency>
         
             <dependency>
                 <groupId>io.vertx</groupId>
