--- a/.openshiftio/application.yaml
+++ b/.openshiftio/application.yaml
@@ -9,6 +9,7 @@ parameters:
 - name: SOURCE_REPOSITORY_URL
   description: The source URL for the application
   displayName: Source URL
+  value: https://github.com/fabric8-analytics/vertx-blank-booster.git
   required: true
 - name: SOURCE_REPOSITORY_REF
   description: The branch name for the application
@@ -30,16 +31,16 @@ objects:
 - apiVersion: v1
   kind: ImageStream
   metadata:
-    name: http-vertx
+    name: vertx-application
     labels:
-      booster: http-vertx
+      booster: vertx-application
   spec: {}
 - apiVersion: v1
   kind: ImageStream
   metadata:
-    name: runtime-http-vertx
+    name: vertx-application
     labels:
-      booster: http-vertx
+      booster: vertx-application
   spec:
     tags:
     - name: latest
@@ -49,14 +50,14 @@ objects:
 - apiVersion: v1
   kind: BuildConfig
   metadata:
-    name: http-vertx
+    name: vertx-application
     labels:
-      booster: http-vertx
+      booster: vertx-application
   spec:
     output:
       to:
         kind: ImageStreamTag
-        name: http-vertx:latest
+        name: vertx-application:latest
     postCommit: {}
     resources: {}
     source:
@@ -69,7 +70,7 @@ objects:
       sourceStrategy:
         from:
           kind: ImageStreamTag
-          name: runtime-http-vertx:latest
+          name: vertx-application:latest
         incremental: true
         env:
         - name: MAVEN_ARGS_APPEND
@@ -96,11 +97,11 @@ objects:
       prometheus.io/port: "9779"
     labels:
       expose: "true"
-      app: http-vertx
+      app: vertx-application
       provider: fabric8
       version: 26-SNAPSHOT
       group: io.openshift.booster
-    name: http-vertx
+    name: vertx-application
   spec:
     ports:
     - name: http
@@ -108,7 +109,7 @@ objects:
       protocol: TCP
       targetPort: 8080
     selector:
-      app: http-vertx
+      app: vertx-application
       provider: fabric8
       group: io.openshift.booster
 - apiVersion: apps.openshift.io/v1
@@ -119,16 +120,16 @@ objects:
       fabric8.io/git-branch: master
       fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=http-vertx&var-version=26-SNAPSHOT
     labels:
-      app: http-vertx
+      app: vertx-application
       provider: fabric8
       version: 26-SNAPSHOT
       group: io.openshift.booster
-    name: http-vertx
+    name: vertx-application
   spec:
     replicas: 1
     revisionHistoryLimit: 2
     selector:
-      app: http-vertx
+      app: vertx-application
       provider: fabric8
       group: io.openshift.booster
     strategy:
@@ -142,7 +143,7 @@ objects:
           fabric8.io/git-branch: master
           fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=http-vertx&var-version=26-SNAPSHOT
         labels:
-          app: http-vertx
+          app: vertx-application
           provider: fabric8
           version: 26-SNAPSHOT
           group: io.openshift.booster
@@ -153,7 +154,7 @@ objects:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          image: http-vertx:latest
+          image: vertx-application:latest
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
@@ -188,20 +189,20 @@ objects:
         - vertx
         from:
           kind: ImageStreamTag
-          name: http-vertx:latest
+          name: vertx-application:latest
       type: ImageChange
 - apiVersion: v1
   kind: Route
   metadata:
     labels:
-      app: http-vertx
+      app: vertx-application
       provider: fabric8
       version: 26-SNAPSHOT
       group: io.openshift.booster
-    name: http-vertx
+    name: vertx-application
   spec:
     port:
       targetPort: 8080
     to:
       kind: Service
-      name: http-vertx
+      name: vertx-application
