--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>vertx blank application</artifactId>
+    <artifactId>vertx-application</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
@@ -45,14 +45,7 @@
                 <version>1.15.3</version>
                 <scope>test</scope>
             </dependency>
-              <dependency>
-      <groupId>io.fabric8</groupId>
-      <artifactId>openshift-client</artifactId>
-      <version>3.1.10</version>
-      <scope>test</scope>
-    </dependency>
 
-        
     </dependencies>
     <build>
 	    <plugins>
@@ -99,11 +92,6 @@
                             <excludes>
                                 <exclude>f8-maven-scm</exclude>
                             </excludes>
-                            <config>
-                                <vertx-health-check>
-                                    <path>/</path>
-                                </vertx-health-check>
-                            </config>
                         </enricher>
                     </configuration>
                 </plugin>
