--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <parent>
+        <groupId>io.openshift</groupId>
+        <artifactId>booster-parent</artifactId>
+        <version>21</version>
+    </parent>
+
+    <groupId>io.openshift.booster</groupId>
     <artifactId>vertx-application</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
